--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
     tags:
       - 'v*'
 
-# Releases need permissions to read and write the repository contents.
+# Releases need permissions to read and write the repository contents
 # GitHub considers creating releases and uploading assets as writing contents.
 permissions:
   contents: write
