--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 # Terraform Provider release workflow.
 name: Release
 
-# This GitHub action creates a release when a tag that matches the pattern..
+# This GitHub action creates a release when a tag that matches the pattern.
 # "v*" (e.g. v0.1.0) is created.
 on:
   push:
@@ -39,4 +39,4 @@ jobs:
         env:
           # GitHub sets the GITHUB_TOKEN secret automatically..
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GPG_FINGERPRINT: ${{ secrets.fingerprint }}
+          GPG_FINGERPRINT: ${{ steps.import_gpg.outputs.fingerprint }}
